--- a/Cogent-Go-Frontend/src/app/app.component.html
+++ b/Cogent-Go-Frontend/src/app/app.component.html
@@ -42,7 +42,7 @@
     <!-- END HEADER DESKTOP-->
 
     <!-- MAIN CONTENT-->
-    <!--<router-outlet></router-outlet>-->
+    <router-outlet></router-outlet>
     <!-- END MAIN CONTENT-->
 
   </div>
