--- a/Cogent-Go-Frontend/src/app/app.component.html
+++ b/Cogent-Go-Frontend/src/app/app.component.html
@@ -14,6 +14,9 @@
           <li>
             <a routerLink="order/create">Place Order</a>
           </li>
+          <li>
+            <a routerLink="addProduct">Add Product</a>
+          </li>
       </ul>
       </nav>
     </div>
