--- a/Cogent-Go-Frontend/src/app/app.component.html
+++ b/Cogent-Go-Frontend/src/app/app.component.html
@@ -1,15 +1,20 @@
 <div class="page-wrapper">
 
-  <!-- MENU SIDEBAR-->
-  <aside class="menu-sidebar d-none d-lg-block">
+  <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
     <div class="logo">
       <a href="index.html">
         <img src="assets/logo.png" alt="Great Outdoors" class="img-responsive">
       </a>
     </div>
+  </nav>
+
+  
+  <!-- MENU SIDEBAR-->
+  <!--
+  <aside class="menu-sidebar d-none d-lg-block">
+    
     <div class="menu-sidebar-content js-scrollbar1">
       <nav class="navbar-sidebar">
-        <!--<app-category-list></app-category-list>-->
         <ul class="list-unstyled navbar-list">
           <li>
             <a routerLink="order/create">Place Order</a>
@@ -18,6 +23,7 @@
       </nav>
     </div>
   </aside>
+  -->
   <!-- END MENU SIDEBAR-->
 
   <!-- PAGE CONTAINER-->
@@ -29,10 +35,19 @@
           <div class="header-wrap">
             <!--<app-search></app-search>-->
             <div class="cart-area d-n">
-              <a href="shopping-detail.html">
+              <span>
+              <a class=bar routerLink="/categories">
+                <!--
                 <div class="total">19.22 <span> 2</span> </div> <i class="fa fa-shopping-cart"
                   aria-hidden="true"></i>
+                -->
+                Home
               </a>
+              </span>
+              <a class=bar routerLink="/about">About</a>
+              <a class=bar routerLink="/contact">Contact</a>
+              <a class=bar routerLink="/cart">Cart</a>
+              <app-user-account></app-user-account>
             </div>
           </div>
           <div class="account-wrap"></div>
