security test - CORS header issue

--- a/Cogent-Go-Frontend/src/app/components/product-specs/product-specs.component.html
+++ b/Cogent-Go-Frontend/src/app/components/product-specs/product-specs.component.html
@@ -13,7 +13,7 @@
               </a>
               <h2>{{ product.description }}</h2>
               <div class="price">{{ product.price | currency:'USD' }}</div>
-              <a href="#" class="primary-btn">Add to cart</a>
+              <a routerLink="/addToCart/{{product.productId}}" class="primary-btn">Add to cart</a>
             </div>
           </div>
         </div>
