login works, backend validation doesn't

--- a/Cogent-Go-Frontend/src/app/components/user-account/user-account.component.css
+++ b/Cogent-Go-Frontend/src/app/components/user-account/user-account.component.css
@@ -2,3 +2,8 @@ a {margin: 15px;
     color: white;
     background-color: blue;
 }
+
+button {margin: 15px;
+    color: white;
+    background-color: blue;
+}
