--- a/Cogent-Go-Frontend/src/app/components/user-add-component/user-add-component.component.html
+++ b/Cogent-Go-Frontend/src/app/components/user-add-component/user-add-component.component.html
@@ -11,7 +11,7 @@
                 <p>Address Line 2: <input type="text" id="addressLine2" name="addressLine2" ngModel>  </p> <br> 
                 <p>State: <input type="text" id="state" name="state" ngModel>  </p> <br> 
                 <p>Pincode: <input type="text" id="pincode" name="pincode" ngModel>  </p> <br> 
-                <p><input type="submit" value="submit" id="b1_submit" name="b1_submit" routerLink=""></p>
+                <p><input type="submit" value="submit" id="b1_submit" name="b1_submit"></p>
             </form>
          
             <span id="message">{{this.message}}</span>
