--- a/Cogent-Go-Frontend/src/app/components/register/register.component.html
+++ b/Cogent-Go-Frontend/src/app/components/register/register.component.html
@@ -3,7 +3,7 @@
         <form
         *ngIf="!isSuccessful"
         name="form"
-        (ngSubmit)="f.form.valid $$ onSubmit()"
+        (ngSubmit)="f.form.valid && onSubmit()"
         #f = "ngForm"
         novalidate
         >
@@ -154,7 +154,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="pincode">pincode</label>
+                    <label for="pincode">Pincode</label>
                     <input
                       type="number"
                       class="form-control"
