--- a/Cogent-Go-Frontend/src/app/app.component.html
+++ b/Cogent-Go-Frontend/src/app/app.component.html
@@ -50,7 +50,7 @@
               </span>
               <a class=bar routerLink="/about">About</a>
               <a class=bar routerLink="/contact">Contact</a>
-              <a class=bar routerLink="/cart">Cart</a>
+              <a class=bar routerLink="/cart/user">Cart</a>
               <app-user-account></app-user-account>
             </div>
           </div>
