--- a/Cogent-Go-Frontend/src/app/components/profile/profile.component.html
+++ b/Cogent-Go-Frontend/src/app/components/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container" *ngIf="currentUser; else loggedOut">
     <header class="jumbotron">
       <h3>
-        <strong>{{ currentUser.firstName }} {{ currentUser.lastName }}</strong> Profile
+        <strong>Profile</strong> 
       </h3>
     </header>
     <p>
