--- a/Cogent-Go-Frontend/src/app/components/product-specs/product-specs.component.html
+++ b/Cogent-Go-Frontend/src/app/components/product-specs/product-specs.component.html
@@ -6,7 +6,7 @@
           <div class="col-md-3">
             <div class="product-box">
               <a routerLink="/products/{{product.productId}}">
-                <img src='assets/placeholder.png' class="img-responsive">
+                <img src='assets/{{product.productName}}.jpg' class="img-responsive">
               </a>
               <a routerLink="/products/{{product.productId}}">
                 <h1>{{ product.productName }}</h1>
