--- a/Cogent-Go-Frontend/src/app/components/product-view/product-view.component.html
+++ b/Cogent-Go-Frontend/src/app/components/product-view/product-view.component.html
@@ -6,7 +6,7 @@
           <div class="col-md-3" *ngFor="let tempProduct of productList">
             <div class="product-box">
               <a routerLink="/products/{{tempProduct.productId}}">
-                <img src='assets/placeholder.png' class="img-responsive">
+                <img src='assets/{{tempProduct.productName}}.jpg' class="img-responsive">
               </a>
               <a routerLink="/products/{{tempProduct.productId}}">
                 <h1>{{ tempProduct.productName }}</h1>
