--- a/Cogent-Go-Frontend/src/app/app.component.html
+++ b/Cogent-Go-Frontend/src/app/app.component.html
@@ -71,11 +71,7 @@
 
 
 <footer>
-  <!--
   <ul>
-    <li><a href="#">About Us</a></li>
-    <li><a href="#">Contact Us</a></li>
-    <li><a href="#">Help</a></li>
+    <li>©2021 Great Outdoors</li>
   </ul>
--->
 </footer>
