--- a/Cogent-Go-Frontend/src/app/components/category-view/category-view.component.html
+++ b/Cogent-Go-Frontend/src/app/components/category-view/category-view.component.html
@@ -6,7 +6,7 @@
           <div class="col-md-2" *ngFor="let category of categoryList">
             <div class="product-box">
               <a routerLink="/categories/{{category}}">
-                <img src='assets/placeholder.png' class="img-responsive">
+                <img src='assets/{{category}}.png' class="img-responsive">
               </a>
               <a routerLink="/categories/{{category}}">
                 <h1>{{ category }}</h1>
