--- a/Cogent-Go-Frontend/src/styles.css
+++ b/Cogent-Go-Frontend/src/styles.css
@@ -6,23 +6,40 @@
  * ----------------------------
  */
 
+
  *{
     margin:0;
     padding:0;
     -webkit-box-sizing:border-box;
     -moz-box-sizing:border-box;
-    box-sizing:border-box
+    box-sizing:border-box;
 }
 
-body{
+html, body{
     font-family:Poppins,sans-serif;
     font-weight:400;
     font-size:16px;
     line-height:1.625;
     color:#666;
     -webkit-font-smoothing:antialiased;
-    -moz-osx-font-smoothing:grayscale
+    -moz-osx-font-smoothing:grayscale;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    align-items: stretch;
+    height: 100vh;
 }
+
+   
+  app-root {
+    order: 0;
+    flex: 1 1 auto;
+    align-self: auto;
+    display: block;
+    background: gray;
+  }
 
 ul{
     margin:0
@@ -109,7 +126,8 @@ a,a:hover{
 .page-wrapper{
     overflow:hidden;
     background:#e5e5e5;
-    padding-bottom:8vh
+    padding-bottom:0;
+    height: 95%
 }
 
 .page-container{
@@ -768,8 +786,9 @@ footer ul li a{
 footer{
     background:#232324;
     z-index:1;
-    position:relative;
-    text-align:center
+    position:bottom;
+    text-align:center;
+    height: 5%
 }
 footer li a{
     color:#313131;
@@ -778,7 +797,6 @@ footer li a{
 footer ul li{
     display:inline-block;
     font-size:14px;
-    padding:10px 20px
 }
 
 /* 
