prettied up the pages

--- a/Cogent-Go-Frontend/src/app/components/product-view/product-view.component.html
+++ b/Cogent-Go-Frontend/src/app/components/product-view/product-view.component.html
@@ -9,7 +9,7 @@
                 <img src='assets/{{tempProduct.productName}}.jpg' class="img-responsive">
               </a>
               <a routerLink="/products/{{tempProduct.productId}}">
-                <h1>{{ tempProduct.productName }}</h1>
+                <h1>{{ tempProduct.productName }}: ${{ tempProduct.price }}</h1>
               </a>
             </div>
           </div>
