--- a/Cogent-Go-Frontend/src/app/components/edit-cart/edit-cart.component.html
+++ b/Cogent-Go-Frontend/src/app/components/edit-cart/edit-cart.component.html
@@ -8,6 +8,7 @@
 
                 <h1>{{ tempCart.product.productName }}</h1>
                 <img src='assets/{{tempCart.product.productName}}.jpg' class="img-responsive">
+                <button routerLink = "/checkout/{{tempCart.cartId}}" class="checkout">Place Order</button>
 
               <form
               name="form"
@@ -21,15 +22,15 @@
                   value="{{ tempCart.quantity }}"
                   required
                 />
-                <button (click)="changeCart(tempCart.product.productId, quantity.value, tempCart.cartId)">Update Quantity</button>
+                <button (click)="changeCart(tempCart.product.productId, quantity.value, tempCart.cartId)" class="update">Update Quantity</button>
               </form>
 
               <div class="price">{{ tempCart.product.price | currency:'USD' }} each</div>
+              
               <div class="price">{{ tempCart.price | currency:'USD' }} total</div>
 
-              <button (click)="deleteCart(tempCart.cartId)" class="primary-btn">Remove </button>
-
-              <button routerLink = "/checkout/{{tempCart.cartId}}">Checkout</button>
+              <button (click)="deleteCart(tempCart.cartId)" class="delete">Remove</button><br>
+              
             </div>
             
           </div>
